--- a/src/arm/BB-BBGW-WL1835-00A0.dts
+++ b/src/arm/BB-BBGW-WL1835-00A0.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2012 Texas Instruments Incorporated - http://www.ti.com/
+ *copyright (C) 2012 Texas Instruments Incorporated - http://www.ti.com/
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -14,24 +14,41 @@
 #include <dt-bindings/interrupt-controller/irq.h>
 
 / {
-	/*
-	 * Free up the pins used by the cape from the pinmux helpers.
-	 */
 	fragment@0 {
-		target = <&ocp>;
+		target-path="/";
 		__overlay__ {
-			P9_12_pinmux { status = "disabled"; };	/* gpmc_ad12.gpio1_28 BT_EN */
-			P8_12_pinmux { status = "disabled"; };	/* gpmc_ad12.mmc2_dat0 */
-			P8_11_pinmux { status = "disabled"; };	/* gpmc_ad13.mmc2_dat1 */
-			P8_16_pinmux { status = "disabled"; };	/* gpmc_ad14.mmc2_dat2 */
-			P8_15_pinmux { status = "disabled"; };	/* gpmc_ad15.mmc2_dat3 */
+			model = "TI AM335x BeagleBone Black Wireless";
+			compatible = "ti,am335x-bone-black", "ti,am335x-bone", "ti,am33xx";
 
-			P8_18_pinmux { status = "disabled"; };	/* gpmc_clk.mmc2_clk */
+			wlan_en_reg: fixedregulator@2 {
+				compatible = "regulator-fixed";
+				regulator-name = "wlan-en-regulator";
+				regulator-min-microvolt = <1800000>;
+				regulator-max-microvolt = <1800000>;
+				startup-delay-us= <70000>;
 
-			//Audio...
-			P9_28_pinmux { status = "disabled"; };
-			P9_29_pinmux { status = "disabled"; };
-			P9_31_pinmux { status = "disabled"; };
+				/* WL_EN */
+				gpio = <&gpio3 9 0>;
+				enable-active-high;
+			};
+
+			leds {
+				pinctrl-names = "default";
+				pinctrl-0 = <&wl18xx_pins>;
+				compatible = "gpio-leds";
+
+				wl18xx_bt_en {
+					label = "wl18xx_bt_en";
+					gpios = <&gpio0 28 GPIO_ACTIVE_HIGH>;
+					default-state = "off";
+				};
+
+				LAN9512_Reset_on {
+					label = "AN9512_Reset";
+					gpios = <&gpio0 21 GPIO_ACTIVE_HIGH>;
+					default-state = "on";
+				};
+			};
 		};
 	};
 
@@ -40,33 +57,54 @@
 		__overlay__ {
 			wl18xx_pins: pinmux_wl18xx_pins {
 				pinctrl-single,pins = <
-					AM33XX_IOPAD(0x878, PIN_OUTPUT_PULLUP | MUX_MODE7)	/* gpmc_ad12.gpio1_28 BT_EN */
-					AM33XX_IOPAD(0x924, PIN_OUTPUT_PULLUP | MUX_MODE7)	 					
+					AM33XX_IOPAD(0x928, PIN_OUTPUT_PULLUP | MUX_MODE7)	/* gmii1_txd0.gpio0_28 - BT_EN */
+                    AM33XX_IOPAD(0x924, PIN_OUTPUT_PULLUP | MUX_MODE7)	 
 				>;
 			};
-			
+
+			wlbtbuf_pin: pinmux_wlbtbuf_pin {
+				pinctrl-single,pins = <
+					AM33XX_IOPAD(0x930, PIN_OUTPUT_PULLUP | MUX_MODE7)	/* gmii1_rxclk.gpio3_10 LS_BUF_EN */
+				>;
+			};
+
 			mmc3_pins: pinmux_mmc3_pins {
 				pinctrl-single,pins = <
-					AM33XX_IOPAD(0x830, PIN_INPUT_PULLUP | MUX_MODE3)	/* gpmc_ad12.mmc2_dat0 */
-					AM33XX_IOPAD(0x834, PIN_INPUT_PULLUP | MUX_MODE3)	/* gpmc_ad13.mmc2_dat1 */
-					AM33XX_IOPAD(0x838, PIN_INPUT_PULLUP | MUX_MODE3)	/* gpmc_ad14.mmc2_dat2 */
-					AM33XX_IOPAD(0x83c, PIN_INPUT_PULLUP | MUX_MODE3)	/* gpmc_ad15.mmc2_dat3 */
-					AM33XX_IOPAD(0x888, PIN_INPUT_PULLUP | MUX_MODE3)	/* gpmc_csn3.mmc2_cmd */
-					AM33XX_IOPAD(0x88c, PIN_INPUT_PULLUP | MUX_MODE3)	/* gpmc_clk.mmc2_clk */
+					AM33XX_IOPAD(0x93c, PIN_INPUT_PULLUP | MUX_MODE6 )	/* (L15) gmii1_rxd1.mmc2_clk */
+					AM33XX_IOPAD(0x914, PIN_INPUT_PULLUP | MUX_MODE6 )	/* (J16) gmii1_txen.mmc2_cmd */
+					AM33XX_IOPAD(0x918, PIN_INPUT_PULLUP | MUX_MODE5 )	/* (J17) gmii1_rxdv.mmc2_dat0 */
+					AM33XX_IOPAD(0x91c, PIN_INPUT_PULLUP | MUX_MODE5 )	/* (J18) gmii1_txd3.mmc2_dat1 */
+					AM33XX_IOPAD(0x920, PIN_INPUT_PULLUP | MUX_MODE5 )	/* (K15) gmii1_txd2.mmc2_dat2 */
+					AM33XX_IOPAD(0x908, PIN_INPUT_PULLUP | MUX_MODE5 )	/* (H16) gmii1_col.mmc2_dat3 */
 				>;
 			};
 
 			mmc3_pins_sleep: pinmux_mmc3_pins_sleep {
 				pinctrl-single,pins = <
-					AM33XX_IOPAD(0x830, PIN_INPUT_PULLDOWN | MUX_MODE3)	/* gpmc_ad12.mmc2_dat0 */
-					AM33XX_IOPAD(0x834, PIN_INPUT_PULLDOWN | MUX_MODE3)	/* gpmc_ad13.mmc2_dat1 */
-					AM33XX_IOPAD(0x838, PIN_INPUT_PULLDOWN | MUX_MODE3)	/* gpmc_ad14.mmc2_dat2 */
-					AM33XX_IOPAD(0x83c, PIN_INPUT_PULLDOWN | MUX_MODE3)	/* gpmc_ad15.mmc2_dat3 */
-					AM33XX_IOPAD(0x888, PIN_INPUT_PULLDOWN | MUX_MODE3)	/* gpmc_csn3.mmc2_cmd */
-					AM33XX_IOPAD(0x88c, PIN_INPUT_PULLDOWN | MUX_MODE3)	/* gpmc_clk.mmc2_clk */
+					AM33XX_IOPAD(0x93c, PIN_INPUT_PULLDOWN | MUX_MODE6 )	/* (L15) gmii1_rxd1.mmc2_clk */
+					AM33XX_IOPAD(0x914, PIN_INPUT_PULLDOWN | MUX_MODE6 )	/* (J16) gmii1_txen.mmc2_cmd */
+					AM33XX_IOPAD(0x918, PIN_INPUT_PULLDOWN | MUX_MODE5 )	/* (J17) gmii1_rxdv.mmc2_dat0 */
+					AM33XX_IOPAD(0x91c, PIN_INPUT_PULLDOWN | MUX_MODE5 )	/* (J18) gmii1_txd3.mmc2_dat1 */
+					AM33XX_IOPAD(0x920, PIN_INPUT_PULLDOWN | MUX_MODE5 )	/* (K15) gmii1_txd2.mmc2_dat2 */
+					AM33XX_IOPAD(0x908, PIN_INPUT_PULLDOWN | MUX_MODE5 )	/* (H16) gmii1_col.mmc2_dat3 */
 				>;
 			};
-			
+
+			/* wl18xx card enable/irq GPIOs. */
+			wlan_pins: pinmux_wlan_pins {
+				pinctrl-single,pins = <
+					AM33XX_IOPAD(0x92c, PIN_OUTPUT_PULLDOWN | MUX_MODE7)	/* gmii1_txclk.gpio3_9 WL_EN */
+					AM33XX_IOPAD(0x944, PIN_INPUT_PULLDOWN | MUX_MODE7)	/* rmii1_refclk.gpio0_29 WL_IRQ */
+				>;
+			};
+
+			/* wl18xx card enable/irq GPIOs. */
+			wlan_pins_sleep: pinmux_wlan_pins_sleep {
+				pinctrl-single,pins = <
+					AM33XX_IOPAD(0x92c, PIN_OUTPUT_PULLDOWN | MUX_MODE7)	/* gmii1_txclk.gpio3_9 WL_EN */
+					AM33XX_IOPAD(0x944, PIN_INPUT_PULLDOWN | MUX_MODE7)	/* rmii1_refclk.gpio0_29 WL_IRQ */
+				>;
+			};
 
 			uart2_pins_default: pinmux_uart2_pins_default {
 				pinctrl-single,pins = <
@@ -85,89 +123,17 @@
 					AM33XX_IOPAD(0x8C4, PIN_INPUT_PULLDOWN | MUX_MODE7)	
 				>;
 			};
-
-			/* wl18xx card enable/irq GPIOs. */
-			wlan_pins: pinmux_wlan_pins {
-				pinctrl-single,pins = <
-					AM33XX_IOPAD(0x828, PIN_OUTPUT_PULLDOWN | MUX_MODE7)	/* gpmc_ad10.gpio0_26 WL_EN */
-					AM33XX_IOPAD(0x82C, PIN_INPUT_PULLDOWN | MUX_MODE7)	/* gpmc_ad11.gpio0_27 WL_IRQ */
-				>;
-			};
-
-			/* wl18xx card enable/irq GPIOs. */
-			wlan_pins_sleep: pinmux_wlan_pins_sleep {
-				pinctrl-single,pins = <
-					AM33XX_IOPAD(0x828, PIN_OUTPUT_PULLDOWN | MUX_MODE7)	/* gpmc_ad10.gpio0_26 WL_EN */
-					AM33XX_IOPAD(0x82C, PIN_INPUT_PULLDOWN | MUX_MODE7)	/* gpmc_ad11.gpio0_27 WL_IRQ */
-				>;
-			};
-			#if 0
-			uart3_pins_default: pinmux_uart3_pins_default {
-				pinctrl-single,pins = <
-					AM33XX_IOPAD(0x934, PIN_INPUT_PULLUP | MUX_MODE1)	/* gmii1_rxd3.uart3_rxd */
-					AM33XX_IOPAD(0x938, PIN_OUTPUT_PULLDOWN | MUX_MODE1)	/* gmii1_rxd2.uart3_txd */
-					AM33XX_IOPAD(0x948, PIN_INPUT | MUX_MODE3)		/* mdio_data.uart3_ctsn */
-					AM33XX_IOPAD(0x94c, PIN_OUTPUT_PULLDOWN | MUX_MODE3)	/* mdio_clk.uart3_rtsn */
-				>;
-			};
-
-			uart3_pins_sleep: pinmux_uart3_pins_sleep {
-				pinctrl-single,pins = <
-					AM33XX_IOPAD(0x934, PIN_INPUT_PULLDOWN | MUX_MODE7)	/* (L17) gmii1_rxd3.uart3_rxd */
-					AM33XX_IOPAD(0x938, PIN_INPUT_PULLDOWN | MUX_MODE7)	/* (L16) gmii1_rxd2.uart3_txd */
-					AM33XX_IOPAD(0x948, PIN_INPUT_PULLDOWN | MUX_MODE7)	/* (M17) mdio_data.uart3_ctsn */
-					AM33XX_IOPAD(0x94c, PIN_INPUT_PULLDOWN | MUX_MODE7)	/* (M18) mdio_clk.uart3_rtsn */
-				>;
-			};
-			#endif
 		};
 	};
 
 	fragment@2 {
-		target-path="/";
-		__overlay__ {
-			model = "TI AM335x BeagleBone Green Wireless";
-			compatible = "ti,am335x-bone-green-wireless", "ti,am335x-bone-green", "ti,am335x-bone-black", "ti,am335x-bone", "ti,am33xx";
-
-			wlan_en_reg: fixedregulator@2 {
-				compatible = "regulator-fixed";
-				regulator-name = "wlan-en-regulator";
-				regulator-min-microvolt = <1800000>;
-				regulator-max-microvolt = <1800000>;
-				startup-delay-us= <70000>;
-
-				/* WL_EN */
-				gpio = <&gpio0 26 0>;
-				enable-active-high;
-			};
-
-			leds {
-				pinctrl-names = "default";
-				pinctrl-0 = <&wl18xx_pins>;
-				compatible = "gpio-leds";
-
-				wl18xx_bt_en {
-					label = "wl18xx_bt_en";
-					gpios = <&gpio1 28 GPIO_ACTIVE_HIGH>;
-					default-state = "off";
-				};
-				LAN9512_Reset_on {
-					label = "AN9512_Reset";
-					gpios = <&gpio0 21 GPIO_ACTIVE_HIGH>;
-					default-state = "on";
-				};
-			};
-		};
-	};
-
-	fragment@3 {
 		target = <&mac>;
 		__overlay__ {
 			status = "disabled";
 		};
 	};
 
-	fragment@4 {
+	fragment@3 {
 		target = <&mmc3>;
 		__overlay__ {
 			dmas = <&edma_xbar 12 0 1
@@ -181,8 +147,8 @@
 			ti,needs-special-hs-handling;
 			keep-power-in-suspend;
 			pinctrl-names = "default", "sleep";
-			pinctrl-0 = <&mmc3_pins &wlan_pins>;
-			pinctrl-1 = <&mmc3_pins_sleep &wlan_pins_sleep>;
+			pinctrl-0 = <&mmc3_pins &wlan_pins &wlbtbuf_pin>;
+			pinctrl-1 = <&mmc3_pins_sleep &wlan_pins_sleep &wlbtbuf_pin>;
 
 			#address-cells = <1>;
 			#size-cells = <0>;
@@ -190,12 +156,12 @@
 				compatible = "ti,wl1835";
 				reg = <2>;
 				interrupt-parent = <&gpio0>;
-				interrupts = <27 IRQ_TYPE_EDGE_RISING>;
+				interrupts = <29 IRQ_TYPE_EDGE_RISING>;
 			};
 		};
 	};
 
-	fragment@5 {
+	fragment@4 {
 		target = <&uart2>;
 		__overlay__ {
 			pinctrl-names = "default", "sleep";
@@ -205,35 +171,31 @@
 		};
 	};
 
-	fragment@6 {
-		target = <&gpio1>;
+	fragment@5 {
+		target = <&gpio3>;
 		__overlay__ {
 			ls_buf_en {
 				gpio-hog;
-				gpios = <29 GPIO_ACTIVE_HIGH>;
+				gpios = <10 GPIO_ACTIVE_HIGH>;
 				output-high;
 				line-name = "LS_BUF_EN";
 			};
 		};
 	};
-
-/* BT_AUD_OUT from wl1835 has to be pulled low when WL_EN is activated.*/
-/* in case it isn't, wilink8 ends up in one of the test modes that     */
-/* intruces various issues (elp wkaeup timeouts etc.)                  */
-/* On the BBGW this pin is routed through the level shifter (U21) that */
-/* introduces a pullup on the line and wilink8 ends up in a bad state. */
-/* use a gpio hog to force this pin low. An alternative may be adding  */
-/* an external pulldown on U21 pin 4.                                  */
-
-	fragment@7 {
-		target = <&gpio3>;
+	
+	fragment@6 {
+		target = <0xd0>;
 		__overlay__ {
-			bt_aud_in {
-				gpio-hog;
-				gpios = <16 GPIO_ACTIVE_HIGH>;
-				output-low;
-				line-name = "MCASP0_AHCLKR";
-			};
+			status = "disabled";
+		};
+
+	};
+	fragment@7 {
+		target = <0x47>;
+		__overlay__ {
+			status = "disabled";
 		};
 	};
+	
 };
+
