Add uio_shmem to pocketbeagle

--- a/src/arm/am335x-pocketbeagle.dts
+++ b/src/arm/am335x-pocketbeagle.dts
@@ -64,6 +64,15 @@
 
 &ocp {
 	/************************/
+	/* PRU Shared Memory */
+	/************************/
+	pruss_shmem: pruss_shmem@4a300000 {
+		status = "okay";
+		compatible = "ti,pruss-shmem";
+		reg = <0x4a300000 0x020000>;
+	};
+
+	/************************/
 	/* P1 Header */
 	/************************/
 
